--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-06-22         [RELEASE] Release of filefill 1.3.1 (Nicole Cordes)
+2018-06-21 86775c6 Use short scalar casting (Nicole Cordes)
+2018-06-20 0c1d00f fix http_code check for typo3 7.6 (kaywalker)
+
 2018-06-19         [RELEASE] Release of filefill 1.3.0 (Nicole Cordes)
 2018-06-19 0bc79fa [BUGFIX] Simplify return conditions in ResourceFactorySlot (Nicole Cordes)
 2018-06-11 d16bf28 [TASK] Add documentation for TYPO3_CONF_VARS configuration (Nicole Cordes)
