--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2018-09-12         [RELEASE] Release of filefill 1.3.2 (Nicole Cordes)
+2018-09-12 fb797f5 [TASK] Update supporting files to EXT:my_skeleton 0.1.4 (Nicole Cordes)
+2018-09-12 03ec1b0 [BUGFIX] Handle response from socket correctly (Nicole Cordes)
+2018-09-12 8f80f8d [BUGFIX] Prevent uncaught exception while file upload (Nicole Cordes)
+2018-09-12 48c2d9c [TASK] Update supporting files to EXT:my_skeleton 0.1.3 (Nicole Cordes)
+2018-06-23 795a239 [TASK] Update supporting files to EXT:my_skeleton 0.1.0 (Nicole Cordes)
+
 2018-06-22         [RELEASE] Release of filefill 1.3.1 (Nicole Cordes)
 2018-06-21 86775c6 Use short scalar casting (Nicole Cordes)
 2018-06-20 0c1d00f fix http_code check for typo3 7.6 (kaywalker)
