--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018-10-03         [RELEASE] Release of filefill 1.4.0 (Nicole Cordes)
+2018-10-03 fc0ff35 [FEATURE] Add support for ImageViewHelper "src" usages (Nicole Cordes)
+
 2018-09-12         [RELEASE] Release of filefill 1.3.2 (Nicole Cordes)
 2018-09-12 fb797f5 [TASK] Update supporting files to EXT:my_skeleton 0.1.4 (Nicole Cordes)
 2018-09-12 03ec1b0 [BUGFIX] Handle response from socket correctly (Nicole Cordes)
