--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2019-08-29         [RELEASE] Release of filefill 3.0.1 (Nicole Cordes)
+2019-08-29 9e773f5 [BUGFIX] Do not try to download files not present in sys_file (Helmut Hummel)
+
 2019-08-20         [RELEASE] Release of filefill 3.0.0 (Nicole Cordes)
 2019-08-20 b62a18c [TASK] Update supporting files to EXT:my_skeleton 0.2.1 (Nicole Cordes)
 2019-08-20 6bc9c0a [TASK] Update README.md (Nicole Cordes)
