--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2020-03-05         [RELEASE] Release of filefill 2.0.3 (Nicole Cordes)
+2020-03-05 dc75844 [BUGFIX] Enforce lower file extension for comparison (Nicole Cordes)
+
 2020-02-26         [RELEASE] Release of filefill 2.0.2 (Nicole Cordes)
 2020-02-26 01713c9 [BUGFIX] Use correct identifier canonicalization (Nicole Cordes)
 
