--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2020-03-05         [RELEASE] Release of filefill 1.4.3 (Nicole Cordes)
+2020-03-05 52addb2 [BUGFIX] Enforce lower file extension for comparison (Nicole Cordes)
+
 2020-02-26         [RELEASE] Release of filefill 1.4.2 (Nicole Cordes)
 2020-02-26 a58828b [BUGFIX] Use correct identifier canonicalization (Nicole Cordes)
 
