--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2020-03-10         [RELEASE] Release of filefill 1.5.0 (Nicole Cordes)
+2020-03-10 9627790 [FEATURE] Allow streaming of files (Nicole Cordes)
+
 2020-03-05         [RELEASE] Release of filefill 1.4.3 (Nicole Cordes)
 2020-03-05 52addb2 [BUGFIX] Enforce lower file extension for comparison (Nicole Cordes)
 
