[TASK] add imagick resource handler
* configure image color, text color, allowedFileExtensions

--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -30,6 +30,9 @@
             <trans-unit id="sys_file_storage.filefill.static">
                 <source>Static file</source>
             </trans-unit>
+            <trans-unit id="sys_file_storage.filefill.imagick">
+                <source>Imagick</source>
+            </trans-unit>
             <trans-unit id="sys_file_storage.filefill.no_missing">
                 <source>No missing files found!</source>
             </trans-unit>
