--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -24,8 +24,8 @@
             <trans-unit id="sys_file_storage.filefill.sys_domain">
                 <source>Domain records</source>
             </trans-unit>
-            <trans-unit id="sys_file_storage.filefill.placeholder_com">
-                <source>Placeholder.com</source>
+            <trans-unit id="sys_file_storage.filefill.placehold">
+                <source>Placehold</source>
             </trans-unit>
             <trans-unit id="sys_file_storage.filefill.imagebuilder">
                 <source>Image builder</source>
