[RELEASE] Release of filefill 5.0.0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2025-05-07         [RELEASE] Release of filefill 5.0.0 (Nicole Hummel)
+2025-05-07 f3d4f6e [BUGFIX] Sanitize tableName and fieldName in FlexFormDataStructureParsedEventListener (Nicole Hummel)
+2025-05-06 470c19b [TASK] Remove superfluous FlexFormTools hook (Nicole Hummel)
+2025-05-06 e981625 [TASK] Add in2code sponsorship to README (Nicole Hummel)
+2025-05-06 172e3ca [BUGFIX] Replace removed TYPO3_CONF_VARS/GFX/gdlib setting (Nicole Hummel)
+2025-05-06 8a26818 [TASK] Migrate sys_file_storage backend integration (Nicole Hummel)
+2025-04-11 6140e19 Update usage of `RemoteResourceInterface` in README (Albrecht Köhnlein)
+2025-04-07 194bd90 !!![TASK] Remove superfluous sys_domain resource handler (Nicole Hummel)
+2025-04-06 70038b0 !!![TASK] Remove deprecated placeholder resource handler (Nicole Hummel)
+2025-04-04 0d52335 [TASK] Some minor code updates (Nicole Hummel)
+2025-04-06 43f0d8c [BUGFIX] Fix Unit test for PHPUnit 11 (Nicole Hummel)
+2025-03-19 7d02dd4 [FEATURE] Create compatibility with TYPO3 13 (André Buchmann)
+2025-04-04 ccd4aa9 [TASK] Raise extension version to 5.x (Nicole Hummel)
+
 2025-02-17         [RELEASE] Release of filefill 4.4.0 (Nicole Hummel)
 2025-02-17 6502ae2 [FEATURE] Add placehold.co as placeholder replacement (Nicole Hummel)
 2025-02-16 631fc6c [TASK] Update author information (Nicole Hummel)
